Added new test fixtures and tests.
Refined the semantics of the 'study_names' field.

--- a/tests/data/mlwh_pb_runs/100-Sample.yml
+++ b/tests/data/mlwh_pb_runs/100-Sample.yml
@@ -1,3 +1,4 @@
+---
 - accession_number: SAMEA11604903
   common_name: Lamellibrachia barhami
   consent_withdrawn: 0
@@ -815,3 +816,481 @@
   supplier_name: promegaB_12
   taxon_id: 4932
   uuid_sample_lims: b887566c-b3f6-11ec-9caa-fa163eac3af7
+- accession_number: SAMEA10332404
+  common_name: Verbascum thapsus
+  consent_withdrawn: 0
+  control: 0
+  created: 2022-10-21 08:10:07
+  donor_id: SAMEA10332243
+  id_lims: SQSCP
+  id_sample_lims: 8500551
+  id_sample_tmp: 8427375
+  last_updated: 2022-10-21 08:10:07
+  name: DTOL13174735
+  public_name: daVerThap1
+  recorded_at: 2022-10-21 08:10:08
+  sanger_sample_id: DTOL13174735
+  supplier_name: FS63842463
+  taxon_id: 39388
+  uuid_sample_lims: c64320ec-5117-11ed-9bd8-fa163eac3af7
+- accession_number: SAMEA9065892
+  common_name: Thaumetopoea processionea
+  consent_withdrawn: 0
+  control: 0
+  created: 2022-10-28 16:01:15
+  donor_id: SAMEA9065811
+  id_lims: SQSCP
+  id_sample_lims: 8509377
+  id_sample_tmp: 8436094
+  last_updated: 2022-10-28 16:01:16
+  name: DTOL13161568
+  public_name: ilThaProc3
+  recorded_at: 2022-10-28 16:01:16
+  sanger_sample_id: DTOL13161568
+  supplier_name: FD30823809
+  taxon_id: 499230
+  uuid_sample_lims: c0a80bf8-56d9-11ed-975e-fa163eea3084
+- accession_number: SAMEA10369798
+  cohort: 2982900000
+  common_name: Agrimonia eupatoria
+  consent_withdrawn: 0
+  created: 2023-03-01 11:55:55
+  customer_measured_volume: 60
+  description: Plant MagAttract v4
+  donor_id: SAMEA10369788
+  id_lims: SQSCP
+  id_sample_lims: 8633375
+  id_sample_tmp: 8559246
+  last_updated: 2023-03-01 11:55:59
+  name: DTOL13630447
+  public_name: drAgrEupa1
+  recorded_at: 2023-03-01 11:56:01
+  sample_type: vouchering
+  sanger_sample_id: DTOL13630447
+  strain: Cryoprep
+  supplier_name: KDTOL10382
+  taxon_id: 57912
+  uuid_sample_lims: 05bd2f02-b828-11ed-b0d1-fa163eea3084
+- accession_number: SAMEA7696557
+  common_name: Tachypodoiulus niger
+  consent_withdrawn: 0
+  control: 0
+  created: 2023-03-17 15:23:41
+  donor_id: SAMEA7696482
+  id_lims: SQSCP
+  id_sample_lims: 8654507
+  id_sample_tmp: 8579905
+  last_updated: 2023-03-17 15:23:41
+  name: DTOL13642523
+  public_name: qdTacNige1
+  recorded_at: 2023-03-17 15:23:42
+  sanger_sample_id: DTOL13642523
+  supplier_name: SubSam_qdTacNige1_3685
+  taxon_id: 433595
+  uuid_sample_lims: b2b60038-c4d7-11ed-8019-fa163eac3af7
+- accession_number: SAMEA12813521
+  common_name: Clistosaccus paguri
+  consent_withdrawn: 0
+  control: 0
+  created: 2023-03-23 08:54:42
+  donor_id: SAMEA12813472
+  id_lims: SQSCP
+  id_sample_lims: 8657549
+  id_sample_tmp: 8582947
+  last_updated: 2023-03-23 08:54:42
+  name: 6771STDY13618009
+  public_name: qxCliPagu9
+  recorded_at: 2023-03-23 08:54:43
+  sanger_sample_id: 6771STDY13618009
+  supplier_name: SubSam_qxCliPagu9_3522
+  taxon_id: 319673
+  uuid_sample_lims: 5a41b3e0-c958-11ed-8ab8-fa163eac3af7
+- accession_number: SAMEA7521974
+  common_name: Borago officinalis
+  consent_withdrawn: 0
+  control: 0
+  created: 2023-03-30 14:59:21
+  donor_id: SAMEA7521932
+  id_lims: SQSCP
+  id_sample_lims: 8663492
+  id_sample_tmp: 8588834
+  last_updated: 2023-03-30 14:59:21
+  name: DTOL13653276
+  public_name: daBorOffi1
+  recorded_at: 2023-03-30 14:59:21
+  sanger_sample_id: DTOL13653276
+  supplier_name: FS63807999
+  taxon_id: 13363
+  uuid_sample_lims: 73aa3736-cf0b-11ed-aa59-fa163eea3084
+- accession_number: SAMEA112963171
+  cohort: 306847500
+  common_name: Selandria serva
+  consent_withdrawn: 0
+  country_of_origin: not provided
+  created: 2023-06-07 15:29:56
+  customer_measured_volume: 14
+  date_of_sample_collection: 2022-07-05
+  description: MagAttract
+  donor_id: SAMEA112963078
+  id_lims: SQSCP
+  id_sample_lims: 8713294
+  id_sample_tmp: 8625878
+  last_updated: 2023-06-07 15:30:03
+  name: DTOL13788282
+  public_name: iySelServ2
+  recorded_at: 2023-06-07 15:30:06
+  sample_type: Vouchering
+  sanger_sample_id: DTOL13788282
+  strain: Powermash
+  supplier_name: NHMUK015059202
+  taxon_id: 410286
+  uuid_sample_lims: 2839dbd0-0548-11ee-add0-fa163eea3084
+- accession_number: SAMEA113426911
+  cohort: 260392500
+  common_name: Chamaemyia aridella
+  consent_withdrawn: 0
+  country_of_origin: not provided
+  created: 2023-06-14 13:22:28
+  customer_measured_volume: 3
+  date_of_sample_collection: not provided
+  description: MagAttract
+  donor_id: SAMEA113425591
+  id_lims: SQSCP
+  id_sample_lims: 8718071
+  id_sample_tmp: 8630655
+  last_updated: 2023-06-14 13:22:32
+  name: DTOL13795633
+  public_name: idChaArid1
+  recorded_at: 2023-06-14 13:22:35
+  sample_type: Vouchering
+  sanger_sample_id: DTOL13795633
+  strain: Powermash
+  supplier_name: Ox002879
+  taxon_id: 2881674
+  uuid_sample_lims: 8260135e-0ab6-11ee-b5ba-fa163eac3af7
+- accession_number: SAMEA113425916
+  cohort: 260392500
+  common_name: Chlorops ringens
+  consent_withdrawn: 0
+  country_of_origin: not provided
+  created: 2023-06-14 13:22:28
+  customer_measured_volume: 1
+  date_of_sample_collection: not provided
+  description: MagAttract
+  donor_id: SAMEA113425730
+  id_lims: SQSCP
+  id_sample_lims: 8718072
+  id_sample_tmp: 8630656
+  last_updated: 2023-06-14 13:22:32
+  name: DTOL13795634
+  public_name: idChlRing1
+  recorded_at: 2023-06-14 13:22:35
+  sample_type: Vouchering
+  sanger_sample_id: DTOL13795634
+  strain: Powermash
+  supplier_name: Ox003155
+  taxon_id: 3039479
+  uuid_sample_lims: 8262fee8-0ab6-11ee-b5ba-fa163eac3af7
+- accession_number: SAMEA113425922
+  cohort: 260392500
+  common_name: Diastata fuscula
+  consent_withdrawn: 0
+  country_of_origin: not provided
+  created: 2023-06-14 13:22:28
+  customer_measured_volume: 1
+  date_of_sample_collection: not provided
+  description: MagAttract
+  donor_id: SAMEA113425735
+  id_lims: SQSCP
+  id_sample_lims: 8718076
+  id_sample_tmp: 8630660
+  last_updated: 2023-06-14 13:22:32
+  name: DTOL13795638
+  public_name: idDiaFusc1
+  recorded_at: 2023-06-14 13:22:35
+  sample_type: Vouchering
+  sanger_sample_id: DTOL13795638
+  strain: Powermash
+  supplier_name: Ox003161
+  taxon_id: 1262299
+  uuid_sample_lims: 826e9b7c-0ab6-11ee-b5ba-fa163eac3af7
+- common_name: Procloeon bifidum
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-11-15 11:46:28
+  date_of_sample_collection: not provided
+  description: SAMEA112222208
+  donor_id: DTOL14162027
+  id_lims: SQSCP
+  id_sample_lims: 9444455
+  id_sample_tmp: 9302420
+  last_updated: 2023-11-15 11:46:28
+  name: DTOL14162027
+  public_name: ieProBifi2
+  recorded_at: 2023-11-15 11:46:28
+  sanger_sample_id: DTOL14162027
+  strain: SAMEA112222162
+  supplier_name: SubSam_ieProBifi2_5062
+  taxon_id: 1592913
+  uuid_sample_lims: 9ca7c5f8-83ac-11ee-9e2f-024293460e78
+- accession_number: SAMEA111431652
+  common_name: Linnaea borealis
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-11-17 08:36:09
+  date_of_sample_collection: not provided
+  donor_id: SAMEA7535987
+  id_lims: SQSCP
+  id_sample_lims: 9451544
+  id_sample_tmp: 9309564
+  last_updated: 2023-11-17 08:36:10
+  name: DTOL13810175
+  public_name: daLinBore1
+  recorded_at: 2023-11-17 08:36:10
+  sanger_sample_id: DTOL13810175
+  supplier_name: SubSam_daLinBore1_4724
+  taxon_id: 77623
+  uuid_sample_lims: 5bc32040-8524-11ee-a665-024224dd57f4
+- accession_number: SAMEA7522163
+  common_name: Chaenorhinum minus
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-11-24 09:47:11
+  date_of_sample_collection: not provided
+  donor_id: SAMEA7522063
+  id_lims: SQSCP
+  id_sample_lims: 9463590
+  id_sample_tmp: 9321705
+  last_updated: 2023-11-24 09:47:12
+  name: DTOL14291044
+  public_name: daChaMinu2
+  recorded_at: 2023-11-24 09:47:12
+  sanger_sample_id: DTOL14291044
+  supplier_name: SubSam_daChaMinu2_5222
+  taxon_id: 105913
+  uuid_sample_lims: 70e98a88-8aae-11ee-becc-024224dd57f4
+- accession_number: SAMEA111431250
+  common_name: Rosa spinosissima
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-11-24 10:53:53
+  date_of_sample_collection: not provided
+  donor_id: SAMEA111431184
+  id_lims: SQSCP
+  id_sample_lims: 9463632
+  id_sample_tmp: 9321748
+  last_updated: 2023-11-24 10:53:54
+  name: DTOL14452869
+  public_name: drRosSpin1
+  recorded_at: 2023-11-24 10:53:54
+  sanger_sample_id: DTOL14452869
+  supplier_name: SubSam_drRosSpin1_5278
+  taxon_id: 74630
+  uuid_sample_lims: c239f784-8ab7-11ee-ae26-024293460e78
+- accession_number: SAMEA9335449
+  common_name: Cephalanthera damasonium
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-11-24 11:10:32
+  date_of_sample_collection: not provided
+  donor_id: SAMEA9335281
+  id_lims: SQSCP
+  id_sample_lims: 9463663
+  id_sample_tmp: 9321777
+  last_updated: 2023-11-24 11:10:33
+  name: DTOL14290946
+  public_name: lsCepDama1
+  recorded_at: 2023-11-24 11:10:33
+  sanger_sample_id: DTOL14290946
+  supplier_name: SubSam_lsCepDama1_5149
+  taxon_id: 78719
+  uuid_sample_lims: 15aef692-8aba-11ee-ae26-024293460e78
+- accession_number: SAMEA110187304
+  common_name: Caenorhabditis sp. BRC20456
+  concentration_determined_by: Spectrophotometer
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: Solomon Islands
+  created: 2023-11-27 09:25:21
+  customer_measured_concentration: 14.7
+  customer_measured_volume: 45
+  date_of_sample_collection: 2015-01-01
+  date_of_sample_extraction: 11/23
+  dna_source: Tissue
+  donor_id: SAMEA110187300
+  extraction_method: Monarch Extraction
+  gender: Mixed
+  id_lims: SQSCP
+  id_sample_lims: 9463876
+  id_sample_tmp: 9321998
+  last_updated: 2023-11-27 09:25:23
+  name: BlaxGeNe14563575
+  public_name: nxCaeSpeh1
+  purification_method: Ethanol
+  purified: Yes
+  recorded_at: 2023-11-27 09:25:23
+  sanger_sample_id: BlaxGeNe14563575
+  storage_conditions: +4C
+  supplier_name: BRC20456
+  taxon_id: 2883082
+  uuid_sample_lims: e36343f6-8d06-11ee-890d-024293460e78
+- accession_number: SAMEA10369857
+  common_name: Halimione portulacoides
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-01 12:08:58
+  date_of_sample_collection: not provided
+  donor_id: SAMEA10369847
+  id_lims: SQSCP
+  id_sample_lims: 9478716
+  id_sample_tmp: 9336860
+  last_updated: 2023-12-01 12:08:59
+  name: DTOL14523233
+  public_name: dcHalPort1
+  recorded_at: 2023-12-01 12:08:59
+  sample_type: LI
+  sanger_sample_id: DTOL14523233
+  supplier_name: SubSam_5444
+  taxon_id: 376799
+  uuid_sample_lims: 68647e92-9042-11ee-a0e6-024293460e78
+- accession_number: SAMEA10369760
+  common_name: Origanum vulgare
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-01 12:08:59
+  date_of_sample_collection: not provided
+  donor_id: SAMEA10369670
+  id_lims: SQSCP
+  id_sample_lims: 9478726
+  id_sample_tmp: 9336869
+  last_updated: 2023-12-01 12:08:59
+  name: DTOL14523243
+  public_name: daOriVulg1
+  recorded_at: 2023-12-01 12:08:59
+  sample_type: LI
+  sanger_sample_id: DTOL14523243
+  supplier_name: SubSam_5438
+  taxon_id: 39352
+  uuid_sample_lims: 688268d0-9042-11ee-a0e6-024293460e78
+- accession_number: SAMEA9335181
+  common_name: Hippuris vulgaris
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-04 13:03:46
+  date_of_sample_collection: not provided
+  donor_id: SAMEA9335108
+  id_lims: SQSCP
+  id_sample_lims: 9478845
+  id_sample_tmp: 9336988
+  last_updated: 2023-12-04 13:03:47
+  name: DTOL14523333
+  public_name: daHipVulg1
+  recorded_at: 2023-12-04 13:03:47
+  sanger_sample_id: DTOL14523333
+  supplier_name: SubSam_5456
+  taxon_id: 39321
+  uuid_sample_lims: 8f4b9580-92a5-11ee-a0e6-024293460e78
+- accession_number: SAMEA9335379
+  common_name: Linum bienne
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-13 08:24:26
+  date_of_sample_collection: not provided
+  donor_id: SAMEA9335256
+  id_lims: SQSCP
+  id_sample_lims: 9506156
+  id_sample_tmp: 9358950
+  last_updated: 2023-12-13 08:24:27
+  name: DTOL14200517
+  public_name: ddLinBien1
+  recorded_at: 2023-12-13 08:24:28
+  sanger_sample_id: DTOL14200517
+  supplier_name: SubSam_ddLinBien1_5026
+  taxon_id: 347648
+  uuid_sample_lims: 074a7f78-9991-11ee-8911-024224dd57f4
+- accession_number: SAMEA113970418
+  common_name: Arabis scabra
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-13 08:24:27
+  date_of_sample_collection: not provided
+  donor_id: SAMEA113970357
+  id_lims: SQSCP
+  id_sample_lims: 9506178
+  id_sample_tmp: 9358974
+  last_updated: 2023-12-13 08:24:27
+  name: DTOL14200539
+  public_name: ddAraScab1
+  recorded_at: 2023-12-13 08:24:28
+  sanger_sample_id: DTOL14200539
+  supplier_name: SubSam_ddAraScab1_5048
+  taxon_id: 50454
+  uuid_sample_lims: 0788e31c-9991-11ee-8911-024224dd57f4
+- accession_number: SAMEA9143697
+  common_name: Veronica hederifolia
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-14 12:28:19
+  date_of_sample_collection: not provided
+  donor_id: SAMEA9143033
+  id_lims: SQSCP
+  id_sample_lims: 9511440
+  id_sample_tmp: 9364225
+  last_updated: 2023-12-14 12:28:19
+  name: DTOL_RD14581308
+  public_name: daVerHede1
+  recorded_at: 2023-12-14 12:28:20
+  sanger_sample_id: DTOL_RD14581308
+  supplier_name: SubSam_5606
+  taxon_id: 202477
+  uuid_sample_lims: 438aed2e-9a7c-11ee-a4e9-024224dd57f4
+- accession_number: SAMEA113425515
+  common_name: Graphomya maculata
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2023-12-18 12:39:16
+  date_of_sample_collection: not provided
+  donor_id: SAMEA113425419
+  id_lims: SQSCP
+  id_sample_lims: 9515159
+  id_sample_tmp: 9367590
+  last_updated: 2023-12-18 12:39:16
+  name: DTOL14026427
+  public_name: idGraMacu2
+  recorded_at: 2023-12-18 12:39:17
+  sanger_sample_id: DTOL14026427
+  supplier_name: SubSam_idGraMacu2_4846
+  taxon_id: 1230139
+  uuid_sample_lims: 74d0724a-9da2-11ee-8314-024293460e78
+- accession_number: SAMEA110451460
+  common_name: Brachypodium pinnatum
+  consent_withdrawn: 0
+  control: 0
+  country_of_origin: not provided
+  created: 2024-01-03 12:32:18
+  date_of_sample_collection: not provided
+  donor_id: SAMEA110451258
+  id_lims: SQSCP
+  id_sample_lims: 9518398
+  id_sample_tmp: 9371025
+  last_updated: 2024-01-03 12:32:18
+  name: DTOL14180244
+  public_name: lpBraPinn1
+  recorded_at: 2024-01-03 12:32:18
+  sanger_sample_id: DTOL14180244
+  supplier_name: SubSam_lpBraPinn1_4987
+  taxon_id: 29663
+  uuid_sample_lims: 22008a52-aa34-11ee-bf16-024224dd57f4
+
