--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "node": ">=16.16.0",
     "npm": ">=8.11.0"
   },
+  "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
